--- a/.github/workflows/pvs_studio.yml
+++ b/.github/workflows/pvs_studio.yml
@@ -45,10 +45,10 @@ jobs:
         if: ${{ !github.event.pull_request.head.repo.fork && github.event.pull_request }}
         id: names
         run: |
-          echo "branch_name=${BRANCH_NAME}" >> $GITHUB_OUTPUT
-          echo "commit_sha=${COMMIT_SHA}" >> $GITHUB_OUTPUT
-          echo "default_target=${DEFAULT_TARGET}" >> $GITHUB_OUTPUT
-          echo "suffix=${SUFFIX}" >> $GITHUB_OUTPUT
+          echo "branch_name=${BRANCH_NAME}" >> "$GITHUB_OUTPUT"
+          echo "commit_sha=${COMMIT_SHA}" >> "$GITHUB_OUTPUT"
+          echo "default_target=${DEFAULT_TARGET}" >> "$GITHUB_OUTPUT"
+          echo "suffix=${SUFFIX}" >> "$GITHUB_OUTPUT"
 
       - name: 'Make reports directory'
         run: |
